...
    return [[CardLogoView alloc] initWithType:type];
}

- (NSString *)title {
    switch (self.cardNetwork) {
        case CardNetworkVisa:
            return @"CVV2";
        case CardNetworkMasterCard:
            return @"CVC2";
        case CardNetworkAMEX:
            return @"CID";
        case CardNetworkChinaUnionPay:
            return @"CVN2";
        case CardNetworkDiscover:
            return @"CID";
        case CardNetworkJCB:
            return @"CAV2";
        default:
            return @"CVV";
    }
}

- (NSString *)hintLabelText {
    if (self.isTokenPayment) {
        return @"please_reenter_the_card_security_code".localized;
...
