...
        data.append(DetailsTableViewSection(title: "General", rows: generalRows))

        // Card details
        if let cardDetails = response.cardDetails {
            let cardDetailsRows = [
                DetailsTableViewRow(title: "Card last 4 digits", value: cardDetails.cardLastFour ?? ""),
                DetailsTableViewRow(title: "Expiry date", value:self.formatExpiryDate(date: cardDetails.endDate)),
                DetailsTableViewRow(title: "Card token", value: cardDetails.cardToken ?? ""),
                DetailsTableViewRow(title: "Card type", value: "\(cardDetails.cardNetwork.rawValue)"),
                DetailsTableViewRow(title: "Bank", value: cardDetails.bank ?? ""),
                DetailsTableViewRow(title: "Card category", value: cardDetails.cardCategory ?? ""),
                DetailsTableViewRow(title: "Card country", value: cardDetails.cardCountry ?? ""),
                DetailsTableViewRow(title: "Card funding", value: cardDetails.cardFunding ?? ""),
...
