//
//  Localizable.strings (English)
//  JudoKit_iOS
//
//  Copyright (c) 2016 Alternative Payments Ltd
//
//  Permission is hereby granted, free of charge, to any person obtaining a copy
//  of this software and associated documentation files (the "Software"), to deal
//  in the Software without restriction, including without limitation the rights
//  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
//  copies of the Software, and to permit persons to whom the Software is
//  furnished to do so, subject to the following conditions:
//
//  The above copyright notice and this permission notice shall be included in all
//  copies or substantial portions of the Software.
//
//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
//  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
//  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

"add_card" = "Add card";
"apple_pay" = "Apple Pay";
"button_done" = "DONE";
"button_edit" = "Edit";
"button_scan_card" = "Scan card";
"button_add_address_line_card" = "+ Add address line %@ (optional)";
"cancel" = "Cancel";
"back" = "Back";
"card_holder_email_hint" = "Email";
"card_holder_hint" = "Cardholder Name";
"card_holder_country_hint" = "Country";
"card_holder_state_hint" = "State";
"card_holder_province_hint" = "Province or territory";
"card_holder_phone_hint" = "Mobile number";
"card_holder_city_hint" = "City";
"card_holder_adress_line_hint" = "Address line %@";
"card_number_hint" = "Card Number";
"card_subtitle" = "%@ Ending";
"cards" = "Cards";
"check_card" = "Check Card";
"check_expiry_date" = "Check expiry date";
"choose_payment_method" = "Choose a Payment Method";
"connected_cards" = "Connected cards";
"country_canada" = "Canada";
"country_other" = "Other";
"country_uk" = "UK";
"country_usa" = "USA";
"customize_card" = "Customize Card";
"default_amex_card_title" = "My American Express Card";
"default_chinaunionpay_card_title" = "My China Union Pay Card";
"default_dinersclub_card_title" = "My Diners Club Card";
"default_discover_card_title" = "My Discover Card";
"default_jcb_card_title" = "My JCB Card";
"default_maestro_card_title" = "My Maestro Card";
"default_mastercard_card_title" = "My MasterCard Card";
"default_visa_card_title" = "My VISA Card";
"delete" = "Delete";
"delete_card_alert_message" = "Are you sure you want to delete this card from your wallet?";
"delete_card_alert_title" = "Delete Card?";
"dismiss" = "Dismiss";
"error" = "Error";
"enter_card_title" = "Enter a card title...";
"error_card_title_too_long" = "Card Name cannot be longer than 28 characters";
"error_invalid_card_number_desc" = "Invalid card number";
"error_unsupported_card_desc" = "%@ is not supported";
"expire_soon" = "expire soon";
"expired" = "Expired";
"expiry_date" = "MM/YY";
"ideal_payment" = "iDeal";
"ideal_transaction" = "iDEAL Transaction";
"invalid_expiry_date_value" = "Invalid date value entered";
"invalid_email_value" = "Invalid email entered";
"invalid_phone_code_value" = "Invalid phone code entered";
"invalid_phone_value" = "Invalid phone entered";
"invalid_postcode" = "Invalid postcode entered";
"invalid_zip_code" = "Invalid ZIP code entered";
"invalid_email_address" = "Please enter a valid email";
"invalid_state_should_not_be_empty" = "Please select a state";
"invalid_province_territory_should_not_be_empty" = "Please select a province or territory";
"invalid_address" = "Please enter a valid address";
"invalid_mobile_number" = "Please enter a valid mobile number";
"invalid_city" = "Please enter a valid city";
"is_expired" = "is Expired";
"no_cards_added" = "You didn’t add any cards yet.\nAdd one right now or use any of the payment methods below";
"no_connected_cards" = "You didn't connect any cards yet";
"ok" = "Ok";
"pay_amount" = "Pay %@";
"pay_by_bank" = "Pay by Bank app";
"pay_now" = "Pay Now";
"continue" = "Continue";
"post_code_hint" = "Postcode";
"email_hint" = "Email";
"phone_country_code_hint" = "+()";
"mobile_number_hint" = "Mobile number";
"address_line_1_hint" = "Address line 1";
"address_line_2_hint" = "Address line 2";
"address_line_3_hint" = "Address line 3";
"city_hint" = "City";
"processing" = "Transaction pending...";
"register_card" = "Register Card";
"retry" = "Retry";
"save" = "Save";
"save_as_default_payment_method" = "Save as default payment method";
"save_card" = "Save Card";
"scan_card_confirm" = "Got it";
"scan_card_go_to_settings" = "Go to Settings";
"scan_card_hint_subtitle" = "We will do our best to scan it";
"scan_card_hint_title" = "Position card in this frame";
"scan_card_no_permission_message" = "Permissions must be granted in order to use the scan card functionality. Please go to Settings and toggle Camera on";
"scan_card_no_permission_title" = "Camera permissions not granted";
"scan_card_restricted_message" = "Scan camera functionality is not available due to restriction on your device";
"scan_card_restricted_title" = "Camera access restricted";
"scan_card_simulator_title" = "Camera not available on iOS simulators";
"secure_server_transmission" = "Your card details are encrypted using TLS before transmission to our secure payment service provider.";
"three_d_secure_check" = "3D Secure Check";
"transaction_delayed" = "This is taking longer than expected...";
"transaction_successful" = "Transaction success!";
"transaction_timeout" = "Transaction timed out!";
"transaction_unsuccessful" = "Card transaction unsuccessful - please try again";
"unknown_card_network" = "Unknown card network";
"will_expire_soon" = "it will expire soon";
"you_will_pay" = "You will pay";

"error_invalid_ideal_currency_desc" = "iDEAL transactions only support EUR as the currency.";
"error_invalid_ideal_currency_reason" = "Invalid currency passed to iDEAL transaction configuration.";
"error_invalid_pbba_currency_desc" = "PBBA transactions only support GBP as the currency.";
"error_invalid_pbba_currency_reason" = "Invalid currency passed to PBBA transaction configuration.";
"error_invalid_pbba_url_scheme_desc" = "PBBA transactions require the deeplink scheme to be set.";
"error_invalid_pbba_url_scheme_reason" = "Either the app's URL Scheme or the deeplink scheme parameter has not been set.";
"error_apple_pay_not_supported_desc" = "Apple Pay is not supported on this device.";
"error_apple_pay_not_supported_reason" = "An Apple Pay transaction was attempted on a device that either does not support, or does not have Apple Pay set up.";
"error_request_failed_desc" = "The request has failed or responded without data.";
"error_request_failed_reason" = "The transaction response returned without any data or there was an error while forming the request.";
"error_request_timeout_desc" = "The request has timed out.";
"error_request_timeout_reason" = "The request failed to complete in the allocated time frame.";
"error_json_serialization_desc" = "The response data could not be serialized into a JSON.";
"error_json_serialization_reason" = "The server responded with an invalid data format.";
"error_user_cancelled_desc" = "The transaction was cancelled by the user.";
"error_user_cancelled_reason" = "The user closed the transaction flow without completing the transaction.";
"error_internet_connection_desc" = "No internet connection found.";
"error_internet_connection_reason" = "The request could not be sent due to no internet connection.";
"error_invalid_card_number_reason" = "The number entered is not a valid card number or is not supported by the SDK.";
"error_unsupported_card_reason" = "The number entered belongs to a card network that is not allowed by the merchant.";
"error_response_parse_desc" = "Unexpected response format returned.";
"error_response_parse_reason" = "The response did not contain some of the required parameters needed to complete the transaction.";
"error_no_message_desc" = "The request has failed with no underlying message.";
"error_no_message_reason" = "The server responded with an error.";
"error_apple_pay_missing_items_desc" = "The Apple Pay configuration must have at least one payment item.";
"error_apple_pay_missing_items_reason" = "The Payment Items array of the Apple Pay configuration is either empty or missing.";
"error_apple_pay_missing_shipping_desc" = "The Apple Pay configuration must have at least one shipping method.";
"error_apple_pay_missing_shipping_reason" = "Shipping methods must be set if the required shipping contact fields are specified.";
"error_judo_id_missing_desc" = "The Judo ID parameter cannot be null or empty.";
"error_judo_id_missing_reason" = "The required Judo ID parameter has not been set in the Judo configuration.";
"error_invalid_judo_id_desc" = "The Judo ID entered is invalid.";
"error_invalid_judo_id_reason" = "The specified Judo ID parameter has an incorrect format.";
"error_currency_missing_desc" = "Currency cannot be null or empty.";
"error_currency_missing_reason" = "The required Currency parameter has not been set in the Judo configuration.";
"error_invalid_currency_desc" = "The specified currency code is not supported.";
"error_invalid_currency_reason" = "The currency code entered is either not a valid ISO 4217 code or is not supported by the SDK.";
"error_apple_pay_merchant_id_missing_desc" = "The Apple Pay merchant ID cannot be null or empty.";
"error_apple_pay_merchant_id_missing_reason" = "Apple Pay needs a valid merchant ID to be able to identify your transaction.";
"error_invalid_country_code_desc" = "The specified country code is not supported.";
"error_invalid_country_code_reason" = "The country code entered is either not a valid ISO 3166 2-letter code or is not supported by the SDK.";
"error_apple_pay_config_missing_desc" = "The Apple Pay transaction has not been configured.";
"error_apple_pay_config_missing_reason" = "No Apple Pay configuration was found in your Judo configuration object.";
"error_invalid_amount_desc" = "The amount specified should be a positive number.";
"error_invalid_amount_reason" = "The amount parameter has either not been set or has an incorrect format.";
"error_invalid_consumer_ref_desc" = "The consumer reference entered is invalid.";
"error_invalid_consumer_ref_reason" = "The consumer reference parameter has either not been set or has an incorrect format.";
"error_invalid_token_payment_transaction_type_desc" = "Token payments transactions only support JPTransactionTypePayment and JPTransactionTypePreAuth as the transaction type.";
"error_invalid_token_payment_transaction_type_reason" = "Invalid transaction type passed to token payment transaction configuration.";

"continue_text" = "Continue";
"add_address_line" = "Add address line %@ (optional)";
"billing_details_title" = "Billing Details";
"back" = "Back";

"card_holder_name_required" = "Cardholder Name is required";
"card_holder_name_too_short" = "Cardholder Name can\'t be less than 4 characters";
"card_holder_name_special_chars" = "Cardholder Name can\'t contain numbers or special characters";

"check_security_code" = "Check your %@";
