...
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROA-hR-jzw">
                    <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                    <color key="barTintColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <items>
                        <navigationItem title="Settings" id="F3a-8t-KMb">
                            <barButtonItem key="rightBarButtonItem" title="Close" style="done" id="ue3-IP-yQT">
                                <connections>
                                    <action selector="didTapCloseButton:" destination="-1" id="TLE-qc-VtU"/>
                                </connections>
                            </barButtonItem>
                        </navigationItem>
                    </items>
...
