...

- (JPPaymentMethodsEmptyListModel *)emptyListModel {
    if (!_emptyListModel) {
        _emptyListModel = [JPPaymentMethodsEmptyListModel new];
        _emptyListModel.identifier = @"JPPaymentMethodEmptyCardListCell";
        _emptyListModel.title = @"You didn't connect any cards yet";
        _emptyListModel.addCardButtonTitle = @"ADD CARD";
        _emptyListModel.addCardButtonIconName = @"plus-icon";
        _emptyListModel.onAddCardButtonTapHandler = @selector(onAddCardButtonTap);
    }
    return _emptyListModel;
}

...
